2009-01-23 Pierre Wieser <pwieser@trychlos.org>

	* nautilus-actions/nact/nact-schemes-list.c: Cleanup the source file.

2009-01-23 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Bump version number.

	* All source files: Updated copyright notice.

2009-01-23 Pierre Wieser <pwieser@trychlos.org>

	* NEWS: Updated for release.

	* po/POTFILES.in:
	Add nautilus-actions/nact/nact-preferences.ui file.

	* configure.ac:
	Add a dependancy on dbus-lib-1 for tracker.

	* nautilus-actions/nact/base-window.c (search_for_child_widget):
	Use GtkBuildable interface instead of 'name' field (fix #607704).

2009-01-20 Pierre Wieser <pwieser@trychlos.org>

	* data/nautilus-actions.schemas.in:
	Add a schema for 'na-desktop/locked' mandatory key.

	* .gitignore:
	Ignore eclipse-specific files.

	* data/nautilus-actions.schemas.in:
	Fix default value for level zero key.
	Describe the new 'schemes' preference key.

	* nautilus-actions/nact/nact-preferences.ui:
	* nautilus-actions/nact/nact-schemes-list.c:
	* nautilus-actions/nact/nact-schemes-list.h: New files.

	* nautilus-actions/nact/nact-iadvanced-tab.c:
	* nautilus-actions/nact/nact-preferences-editor.c:
	* nautilus-actions/nact/Makefile.am: Updated accordingly.

2009-01-17 Pierre Wieser <pwieser@trychlos.org>

	* nautilus-actions/nact/nact-assistant-export.ui:
	* nautilus-actions/nact/nautilus-actions-config-tool.ui:
	Forces default orientation of vboxes (fix #607218).

	* nautilus-actions/nact/nact-main-toolbar.c:
	* nautilus-actions/nact/nact-main-toolbar.h: New files.

	* nautilus-actions/nact/Makefile.am:
	* nautilus-actions/nact/nact-main-menubar.c: Updated accordingly.

2009-01-16 Pierre Wieser <pwieser@trychlos.org>

	* nautilus-actions/nact/nact-clipboard.c:
	Fix primary clipboard management.

	* nautilus-actions/nact/nact-main-menubar.c	(on_update_sensitivities):
	Fix cut/copy/duplicate/delete sensitivity when selection is	multiple.

2009-01-15 Pierre Wieser <pwieser@trychlos.org>
